Add Real-World Examples slides

--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -150,6 +150,29 @@ go doc
 
 ---
 
+## Go Powers Your DevOps Stack
+
+Already using Go (probably):
+
+- **Container orchestration**: Docker, Kubernetes, containerd
+- **Infrastructure**: Terraform, Packer, Consul, Vault
+- **Monitoring**: Prometheus, Grafana, Telegraf
+- **CLI tools**: GitHub CLI, kubectl, helm
+- **Cloud**: Many AWS/GCP/Azure tools
+
+---
+
+## Go Powers Your DevOps Stack
+
+Why did they choose Go?
+
+- Fast builds for rapid iteration
+- Easy deployment (single binary)
+- Excellent networking libraries
+- Natural fit for distributed systems
+
+---
+
 ## Concurrency with Goroutines
 
 ![](figures/gopher-goroutines.jpg){fig-align="center"}
