--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -260,6 +260,22 @@ func main() {
 
 ---
 
+## Error Handling: Explicit is Better
+
+```go
+data, err := ioutil.ReadFile("config.yaml")
+if err != nil {
+    return fmt.Errorf("failed to read config: %w", err)
+}
+```
+
+- No hidden control flow (no exceptions)
+- Errors are values
+- Forces you to think about failure cases
+- `defer` for cleanup (like Python's context managers)
+
+---
+
 ## Every Go Program is a Goroutine
 
 </br>
