--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -44,7 +44,7 @@ execute:
   - Security
   - Reliability
 
-- Lean syntax &rarr; Easy to learn and use
+- Lean syntax
 - Strong standard library
 - Built-in tools
 
@@ -52,13 +52,35 @@ execute:
 
 ## Go's Minimal Syntax
 
-- Only 25 keywords (Python: 35, Java: 50+)
-- One way to do things (vs. Python's "many ways")
-- No classes, no inheritance, no generics (until Go 1.18)
+- Only 25 keywords (Python: 35, Java: 68, C++23: 92)
+- Strongly idiomatic - one way to do things
+- No classes, no inheritance - favour composition
 - Explicit error handling - no exceptions
 - Fast compilation: feels like an interpreted language
 
-**Example: A complete web server in ~15 lines**
+---
+
+### A complete web server in 15 lines
+
+```{.go}
+package main
+
+import (
+    "fmt"
+    "net/http"
+)
+
+func handler(w http.ResponseWriter, r *http.Request) {
+    fmt.Fprintf(w, "Hello, %s!", r.URL.Path[1:])
+}
+
+func main() {
+    http.HandleFunc("/", handler)
+    http.ListenAndServe(":8080", nil)
+}
+```
+
+---
 
 ## All You Need Is STD
 
