--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -14,26 +14,48 @@ execute:
 
 ## Introduction
 
+:::: {.columns}
+
+::: {.column width="30%"}
+![](https://raw.githubusercontent.com/egonelbre/gophers/63b1f5a9f334f9e23735c6e09ac003479ffe5df5/vector/adventure/hiking.svg)
+:::
+
+::: {.column width="70%"}
+
 - My Go journey
-  - Started just playing around with it out of interest
-  - Used it for Advent of Code 2024
-  - Joined the ARC TRE team
+  - Fiddling around with it and used it for Advent of Code 2024
+  - Joined the ARC TRE team January 2025
 
 - What we'll cover today:
   - Go's unique characteristics
   - Why it's ideal for DevOps
   - Real-world examples
-  - Practical demonstrations
+    :::
+
+::::
 
 ---
 
-## What Makes Go Different
+## What Makes Go Different {.smaller}
+
+:::: {.columns}
+
+::: {.column}
 
 - Created at Google (2009) as a modern simple alternative to C
 - Core philosophy: simplicity, readability, and pragmatism
 - Key features overview: compiled, statically typed, garbage collected, built-in concurrency
 - The "boring is good" principle - stability over novelty
 - Compilation speed: Go compiles so fast it feels interpreted
+  :::
+
+::: {.column}
+
+![](https://raw.githubusercontent.com/golang-samples/gopher-vector/9fe99fbf17b019125bf649f8a921882b54e151a6/gopher.svg)
+
+:::
+
+::::
 
 ---
 
@@ -48,6 +70,8 @@ execute:
 - Lean syntax
 - Strong standard library
 - Built-in tools
+
+![](https://raw.githubusercontent.com/keygx/Go-gopher-Vector/fe01b920482f9ab2c6ec7d1928c3c617341e3841/svg/gopher02c.svg){.absolute top=200 right=100 width="300"}
 
 ---
 
@@ -94,7 +118,9 @@ Go's standard library includes everything you need[^1]:
 - Data: `encoding/json`, `encoding/xml`, `encoding/csv`
 - ... and much more
 
-<!--Bonus: the standard library is actually readable and an excellent resource for learning Go (take that, C++)-->
+::: {.notes}
+Bonus: the standard library is actually readable and an excellent resource for learning Go (take that, C++)
+:::
 
 [^1]: until it doesn't, in which case Go still has an excellent package ecosystem.
 
@@ -130,27 +156,19 @@ go doc
 
 ## What About Performance?
 
-::: {style="font-size: 50%;"}
-
 > Go has excellent performance right out of the box. By design, there are no
 > knobs or levers that you can use to squeeze more performance out of Go
 >
 > -- _[Steve Francia (Go Team)](https://spf13.com/p/rust-vs-go-better-together)_
-
-:::
 
 ---
 
-## What About Performance?
-
-::: {style="font-size: 50%;"}
+## What About Performance? {.smaller}
 
 > Go has excellent performance right out of the box. By design, there are no
 > knobs or levers that you can use to squeeze more performance out of Go
 >
 > -- _[Steve Francia (Go Team)](https://spf13.com/p/rust-vs-go-better-together)_
-
-:::
 
 ![](figures/speed-comparison.png){fig-align="center" fig-alt="Speed comparison of programming languages"}
 
@@ -158,14 +176,22 @@ go doc
 
 ## Go's DevOps Superpowers
 
+:::: {.columns}
+
+:::{.column width="30%"}
+![](https://raw.githubusercontent.com/egonelbre/gophers/63b1f5a9f334f9e23735c6e09ac003479ffe5df5/vector/superhero/standing.svg)
+:::
+
+:::{.column width="70%"}
+
 - Fast build times & cross-compilation
-  - Cross-compile for all platforms: `GOOS=linux GOARCH=amd64 go build`
 - Small static binaries
-  - Binary size: ~15MB for a full-featured CLI tool
 - Low memory footprint and garbage collection
-  - Memory: typical Go service uses 10-50MB vs. 100-500MB for JVM
 - Efficient concurrency
-- Lends itself very well to microservices architecture
+- Lends itself well to microservices architecture
+  :::
+
+::::
 
 ---
 
