Add note on garbage collection

--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -180,6 +180,10 @@ go doc
 >
 > -- _[Steve Francia (Go Team)](https://spf13.com/p/rust-vs-go-better-together)_
 
+- Compiled
+- Garbage collected
+  &rarr; memory safe but pays some performance cost
+
 ---
 
 ## What About Performance? {.smaller}
