--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -393,3 +393,7 @@ exit status 2
 - <https://go.dev/learn/#featured-books>
 
 :::
+
+---
+
+More code examples available at <https://github.com/milanmlft/talks/tree/main/2025-12-07-DevOpsHour-Go/examples>
