--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -415,7 +415,7 @@ func main() {
     results := make([]string, 0, len(services))
 
     for _, service := range services {
-        checkHealth(service, results)
+        checkHealth(service, &results)
     }
 
     for range services {
