--- a/2025-12-07-DevOpsHour-Go/index.qmd
+++ b/2025-12-07-DevOpsHour-Go/index.qmd
@@ -411,16 +411,16 @@ A non-concurrent example
 func checkHealth(url string, results *[]string)
 
 func main() {
-    services := []string{"http://api1.com", "http://api2.com", "http://api3.com"}
-    results := make([]string, 0, len(services))
+	services := []string{"http://api1.com", "http://api2.com", "http://api3.com"}
+	results := make([]string, 0, len(services))
 
-    for _, service := range services {
-        checkHealth(service, &results)
-    }
+	for _, service := range services {
+		checkHealth(service, &results) // Run health checks sequentially
+	}
 
-    for range services {
-        fmt.Println(results)
-    }
+	for _, res := range results {
+		fmt.Println(res)
+	}
 }
 ```
 
@@ -434,17 +434,18 @@ Making it concurrent
 func checkHealth(url string, results chan<- string)
 
 func main() {
-    services := []string{"http://api1.com", "http://api2.com", "http://api3.com"}
-    results := make(chan string, len(services))
+	services := []string{"http://api1.com", "http://api2.com", "http://api3.com"}
+	results := make(chan string, len(services))
 
-    for _, service := range services {
-        go checkHealth(service, results)
-    }
+	for _, service := range services {
+		go checkHealth(service, results) // Run health checks concurrently
+	}
 
-    for range services {
-        fmt.Println(<-results)
-    }
+	for range services {
+		fmt.Println(<-results) // Collect results
+	}
 }
+
 ```
 
 ---
